--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_map: ^8.0.0
   google_maps_flutter_web: ^0.5.10
   google_fonts: ^6.1.0
+  animate_do: ^4.2.0
+  animated_text_kit: ^4.2.3
 
 
 
